<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_on_primary"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/design_default_color_surface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_menu_black">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/home"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_inventory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintWidth_percent="0.8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_inventory"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center"
                android:text="@string/prime_design_inventory"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/img_placeholder_inventory"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/a_man_driving_a_forklift"
                android:scaleType="centerCrop"
                android:src="@drawable/warehouse" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_go_to_inventory"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/go_to_inventory_management"
                android:textColor="@color/white"
                app:backgroundTint="@color/design_default_color_primary" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_team"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_inventory"
        app:layout_constraintWidth_percent="0.8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_team"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:gravity="center"
                android:text="@string/prime_design_weld_team"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/img_placeholder_team"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/a_welder_working_on_steel"
                android:scaleType="centerCrop"
                android:src="@drawable/welder" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_go_to_team_management"
                style="@style/Widget.MaterialComponents.FloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/go_to_team_management"
                android:textColor="@color/white"
                app:backgroundTint="@color/design_default_color_primary" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>