<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/design_default_color_surface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_menu_black">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/Inventory"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/search_box"
        android:layout_width="308dp"
        android:layout_height="49dp"
        android:layout_marginEnd="6dp"
        android:hint="@string/search_parts"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/recycler_view"
        app:layout_constraintEnd_toStartOf="@+id/add_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="110dp"
        android:layout_height="52dp"
        android:text="@string/add_part"
        app:cornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar2"
        app:layout_constraintEnd_toStartOf="@+id/remove_button"
        app:layout_constraintStart_toEndOf="@+id/search_box"
        tools:layout_editor_absoluteY="64dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/remove_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="132dp"
        android:layout_height="52dp"
        android:text="@string/remove_part"
        app:cornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar2"
        app:layout_constraintEnd_toStartOf="@+id/delete_button"
        app:layout_constraintStart_toEndOf="@+id/add_button"
        tools:layout_editor_absoluteY="64dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_button"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="134dp"
        android:layout_height="52dp"
        android:text="@string/delete_part"
        app:cornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/remove_button"
        tools:layout_editor_absoluteY="64dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="756dp"
        android:layout_height="1124dp"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_box" />

</androidx.constraintlayout.widget.ConstraintLayout>